# Cluster

./: .gitignore  Dockerfile  Jenkinsfile  mysite-dev.yml  mysite-stage.yml  skaffold.yaml
autoscaler/: cluster-autoscaler.yaml
cert-manager-deployment/: cert-route53.yml  certificate.yaml  mainsite-certificate.yaml  prod-issuer.yaml  route53.yaml  selfsigned-dev.yaml  values.yaml
externaldns/: external.yaml
istio/: gateway.yaml
kiam/: agent.yaml  cert.yaml  commands.sh  namespace.yaml  server.yaml
metallb/: metallb-conf.yaml
netdata/: child.yml
payme.beer/: .gitignore  Dockerfile  buymebeer-site.yaml
redis-deployment/: cluster_role.yaml  cluster_role_binding.yaml  operator.yaml  redis.kun_distributedredisclusters_crd.yaml  redis.kun_redisclusterbackups_crd.yaml  redis.kun_v1alpha1_distributedrediscluster_cr.yaml  service_account.yaml
site-fpm/: Dockerfile
slackbot/: BUILD.bazel
slackbot/controllers/: BUILD.bazel
slackbot/drivers/: BUILD.bazel
slackbot/views/: BUILD.bazel
staticsite/: .gitignore  Dockerfile  mystatic-site.yaml
traefik-deployment/: domains.yml  service-acc.yml  traefik-clb.yml  traefik-cr.yaml  traefik-deployment.yml
