load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "slackbot_lib",
    srcs = ["main.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/slackbot",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "slackbot",
    embed = [":slackbot_lib"],
    visibility = ["//visibility:public"],
)
