load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "drivers",
    srcs = ["slack.go"],
    importpath = "github.com/Anthony-Bible/password-exchange/app/slackbot/drivers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_viper//:viper",
    ],
)
