load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "views",
    srcs = [
        "appHomeViews.go",
        "greetingViews.go",
        "rendertemplate.go",
        "views.go",
    ],
    embedsrcs = [
        "appHomeViewsAssets/AppHomeView.json",
        "appHomeViewsAssets/CreateStickieNoteModal.json",
        "appHomeViewsAssets/NoteBlock.json",
        "greetingViewsAssets/greeting.json",
        "slackCommandAssets/annnoncement.json",
        "slackCommandAssets/rocket.json",
        "slackCommandAssets/rocket0.png",
        "slackCommandAssets/rocket1.png",
        "slackCommandAssets/rocket2.png",
        "slackCommandAssets/rocket3.png",
    ],
    importpath = "github.com/Anthony-Bible/password-exchange/app/slackbot/views",
    visibility = ["//visibility:public"],
    deps = ["@com_github_slack_go_slack//:slack"],
)

go_test(
    name = "views_test",
    srcs = [
        "appHomeViews_test.go",
        "greetingViews_test.go",
        "slashCommandView_test.go",
    ],
    embed = [":views"],
    deps = [
        "@com_github_davecgh_go_spew//spew",
        "@com_github_go_test_deep//:go_default_library",
        "@com_github_slack_go_slack//:slack",
    ],
)
